# meDAW

./: CMakeLists.txt  README.md  main.cpp  manage  setup.sh
include/: color.hpp
modules/: CMakeLists.txt
modules/polyCodec/: CMakeLists.txt
modules/polyCodec/include/: decoded_audio.hpp
modules/polyCodec/src/: decoded_audio.cpp
modules/polyCodec/tests/: UT_decoded_audio.cpp
